continuing bulk data loader related methods...